--- a/code/test.ipynb
+++ b/code/test.ipynb
@@ -899,11 +899,11 @@
     "\n",
     "af='after'\n",
     "be='before'\n",
-    "lis = pd.read_csv('/root/movie/movie_04.csv')\n",
+    "lis = pd.read_csv('/home/ubuntu/movie/data/naver_movie_all.csv')\n",
     "j=0\n",
     "movie_lis2=[]\n",
     "for i in range(len(lis['naver_movieCd'])):\n",
-    "    if(os.path.isfile('/root/movie/data2/after/'+str(lis['naver_movieCd'][i])[:-2]+'.csv') == True):\n",
+    "    if(os.path.isfile('/home/ubuntu/movie/data/after/'+str(lis['naver_movieCd'][i])[:-2]+'.csv') == True):\n",
     "        movie_lis2.insert(j,str(lis['naver_movieCd'][i])[:-2])\n",
     "        j+=1\n",
     "# movie_lis2"
@@ -938,7 +938,7 @@
     "# for code in movie_lis2:\n",
     "def func123(code):    \n",
     "    print(code)\n",
-    "    df = pd.read_csv('/root/movie/data2/after/'+code+'.csv')\n",
+    "    df = pd.read_csv('/home/ubuntu/movie/data/after/'+code+'.csv')\n",
     "    ll=[]\n",
     "    for i in range(len(df)):\n",
     "        pos_neg = predict_pos_neg(df['2'][i])\n",
@@ -969,7 +969,7 @@
     "        cc_list.append(tmp_score/len1)\n",
     "        \n",
     "    list2= pd.DataFrame(list(zip(df2,bb_list,cc_list)))\n",
-    "    list2.to_csv('/root/movie/data2/after_rating/'+code+'_rating.csv',index=False)\n",
+    "    list2.to_csv('/home/ubuntu/movie/data/after_rating/'+code+'_rating.csv',index=False)\n",
     "    "
    ]
   },
@@ -1103,7 +1103,7 @@
    "outputs": [],
    "source": [
     "list2= pd.DataFrame(list(zip(df2,bb_list,cc_list)))\n",
-    "list2.to_csv('../movie/data2/after_rating/'+code+'_rating.csv',index=False)"
+    "list2.to_csv('/home/ubuntu/movie/data/after_rating/'+code+'_rating.csv',index=False)"
    ]
   },
   {
