--- a/code/4.4분석3.ipynb
+++ b/code/4.4분석3.ipynb
@@ -2,34 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "library(plotly)\n",
-    "Sys.setenv(\"plotly_username\"=\"qlrepdlxj\")\n",
-    "Sys.setenv(\"plotly_api_key\"=\"p3j4RHZVUd6lFgKybuvu\")"
+    "# Sys.setenv(\"plotly_username\"=\"qlrepdlxj\")\n",
+    "# Sys.setenv(\"plotly_api_key\"=\"p3j4RHZVUd6lFgKybuvu\")\n",
+    "Sys.setenv(\"plotly_username\"=\"whfvm2018\")\n",
+    "Sys.setenv(\"plotly_api_key\"=\"XEY2NVYyamaviUt6HF8p\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read.csv(\"/home/ubuntu/movie/data/final/85579.csv\")\n",
+    "data = read.csv(\"/home/ubuntu/movie/data/85579.csv\")\n",
     "data = data.frame(data)\n",
     "# data\n",
     "x1 <- data$집계날짜\n",
     "y1 <- data$일일관람객\n",
     "y2 <- data$검색량\n",
-    "# y3 <- data$리뷰갯수\n",
+    "y3 <- data$리뷰수\n",
     "y4 <- data$평점/10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
     "  title = \"\"\n",
     ")\n",
     "p <- plot_ly(x = ~1:length(x1), y = y1, name = \"일일관람객\",type='bar') %>%\n",
-    "  add_lines(x = ~1:length(x1), y = y3 name = \"검색량\", yaxis = \"y3\") %>%\n",
+    "  add_lines(x = ~1:length(x1), y = y3, name = \"리뷰수\", yaxis = \"y3\") %>%\n",
     "  layout(\n",
     "    title = \"\", yaxis2 = ay,\n",
     "    xaxis = list(title=\"\")\n",
@@ -77,18 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found a grid already named: 'part3. 신과함께3 Grid'. Since fileopt='overwrite', I'll try to update it\n",
-      "Found a plot already named: 'part3. 신과함께3'. Since fileopt='overwrite', I'll try to update it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ay <- list(\n",
     "  tickfont = list(color = \"red\"),\n",
@@ -110,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read.csv(\"/home/ubuntu/movie/data/final/146469.csv\")\n",
+    "data = read.csv(\"/home/ubuntu/movie/data/146469.csv\")\n",
     "data = data.frame(data)\n",
     "# data\n",
     "x1 <- data$집계날짜\n",
     "y1 <- data$일일관람객\n",
     "y2 <- data$검색량\n",
-    "# y3 <- data$리뷰갯수\n",
+    "y3 <- data$리뷰수\n",
     "y4 <- data$평점/10"
    ]
   },
@@ -150,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found a grid already named: 'part3. 택시운전사2 Grid'. Since fileopt='overwrite', I'll try to update it\n",
+      "Found a plot already named: 'part3. 택시운전사2'. Since fileopt='overwrite', I'll try to update it\n"
+     ]
+    }
+   ],
    "source": [
     "ay <- list(\n",
     "  tickfont = list(color = \"red\"),\n",
@@ -161,7 +163,7 @@
     "  title = \"\"\n",
     ")\n",
     "p <- plot_ly(x = ~1:length(x1), y = y1, name = \"일일관람객\",type='bar') %>%\n",
-    "  add_lines(x = ~1:length(x1), y = y3 name = \"검색량\", yaxis = \"y3\") %>%\n",
+    "  add_lines(x = ~1:length(x1), y = y3, name = \"리뷰수\", yaxis = \"y3\") %>%\n",
     "  layout(\n",
     "    title = \"\", yaxis2 = ay,\n",
     "    xaxis = list(title=\"\")\n",
@@ -174,9 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found a grid already named: 'part3. 택시운전사3 Grid'. Since fileopt='overwrite', I'll try to update it\n",
+      "Found a plot already named: 'part3. 택시운전사3'. Since fileopt='overwrite', I'll try to update it\n"
+     ]
+    }
+   ],
    "source": [
     "ay <- list(\n",
     "  tickfont = list(color = \"red\"),\n",
@@ -198,23 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read.csv(\"/home/ubuntu/movie/data/final/146506.csv\")\n",
+    "data = read.csv(\"/home/ubuntu/movie/data/146506.csv\")\n",
     "data = data.frame(data)\n",
     "# data\n",
     "x1 <- data$집계날짜\n",
     "y1 <- data$일일관람객\n",
     "y2 <- data$검색량\n",
-    "# y3 <- data$리뷰갯수\n",
+    "y3 <- data$리뷰수\n",
     "y4 <- data$평점/10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +260,7 @@
     "  title = \"\"\n",
     ")\n",
     "p <- plot_ly(x = ~1:length(x1), y = y1, name = \"일일관람객\",type='bar') %>%\n",
-    "  add_lines(x = ~1:length(x1), y = y3 name = \"검색량\", yaxis = \"y3\") %>%\n",
+    "  add_lines(x = ~1:length(x1), y = y3, name = \"리뷰수\", yaxis = \"y3\") %>%\n",
     "  layout(\n",
     "    title = \"\", yaxis2 = ay,\n",
     "    xaxis = list(title=\"\")\n",
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
